--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Main Page</h1>
+    <h1>Info Page</h1>
     현재 로그인 사용자 아이디 : <span th:text="${user}"></span>
 </body>
 </html>
