--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Main Page</h1>
     현재 로그인 사용자 아이디 : <span th:text="${user}"></span>
+    <br>
+    <div><a href="/logout">로그아웃</a></div>
 </body>
 </html>
